# aloof-union

./: .coveragerc  .gitignore  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  coverage.yml
docs/source/: CHANGELOG.rst  conf.py  index.rst
docs/source/modules/: index.rst
src/aloof_union/: __init__.py  cli.py  exceptions.py  version.py
src/aloof_union/core/: __init__.py  models.py  transpiler.py
src/aloof_union/core/parsers/: __init__.py  base.py  freshservice.py  jsm.py  mermaid.py
src/aloof_union/core/transpilers/: __init__.py  base.py  validation.py  workflow.py
src/aloof_union/tests/: __init__.py  conftest.py  test_integration.py  test_parsers.py  test_transpiler.py  test_validation.py
