# setup.cfg
[metadata]
name = aloof-union
version = attr: aloof_union.__version__
author = Your Name
author_email = your.email@example.com
description = A service desk workflow transpiler library
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/yourusername/aloof-union
project_urls =
    Bug Tracker = https://github.com/yourusername/aloof-union/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    click>=8.0.0
    dataclasses; python_version < "3.7"

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    aloof-union = aloof_union.cli:cli

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.0
    black>=22.0
    isort>=5.0
    mypy>=0.9
    tox>=3.24
docs =
    sphinx>=4.0
    sphinx-rtd-theme>=0.5

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = --verbose --cov=aloof_union

[coverage:run]
source = aloof_union

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88
